# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  setup.cfg
page_analyzer/: app.py  message_texts.py  storage.py  validation.py  web.py
page_analyzer/templates/: 404.html  base.html  index.html  url.html  urls.html
