[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Gleb Voropaev <info@gvoropaev.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.2"
gunicorn = "^20.1.0"
validators = "^0.20.0"
python-dotenv = "^0.21.1"
psycopg2 = "^2.9.5"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
